Version Beta 1.6.0

Programm
- Fehler in der Aktualisierung der Modelle behoben.
  Alle Models aktualisieren sich jetzt automatisch. Dadurch
  Entfallen alle "Aktualisieren" Buttons.
- Die Prüfung von Reprisals und Rewards erfolgt erst, wenn
  versucht wird sie auszuführen. Im Fehlerfall wird das
  fehlerhafte Behavior übersprungen.

Bibliothek
- Behavior hinzugefügt: Reprisal_DefeatOtherPlayer
  Man kann den Spieler angeben, der verlieren soll.
- Behavior hinzugefügt: Reward_DefeatOtherPlayer
  Man kann den Spieler angeben, der verlieren soll.
- Behavior hinzugefügt: Reprisal_VictoryOtherPlayer
  Man kann den Spieler angeben, der gewinnen soll.
- Behavior hinzugefügt: Reward_VictoryOtherPlayer
  Man kann den Spieler angeben, der gewinnen soll.
- Standard Zoom Limit ist jetzt 1.5
- Armeen marschieren seltener in langen Kolonen. Sie versuchen
  öfter zu gruppieren.
- Armeen fallen nicht mehr so oft auf Ablenkungen herein
- Ein Game Callback für Producer hinzugefügt
- Wann eine Spawn Army als besiegt gilt, kann nun konfiguriert
  werden
- Spawnpoint von Standard Spawn Armies korrigiert
- Dokumentation für QSB Game Callbacks hinzugefügt

------------------------------------------------------------

Version Beta 1.5.4

- KI-Armeen eiern nicht mehr herum
- Option hinzugefügt, um die maximale Anzahl an Armeen die
  ein einziges Ziel des Standard Controller angreifen, kann
  nun erhöht werden.

------------------------------------------------------------

Version Beta 1.5.3

Programm
- Behavior geändert: Reward_AI_EnableArmyAttack
  * Parameter PlayerID wurde entfernt
- Behavior geändert: Reward_AI_EnableArmyPatrol
  * Parameter PlayerID wurde entfernt
- Behavior geändert: Reward_AI_CreateSpawnArmy
  * Parameter Typ wurde entfernt
- Button "Dokumentation" im Hilfe-Tab hinzugefügt.

Bibliothek
- Optioin zum Abschalten von Angriffen einer Standardarmee
- Optioin zum Abschalten von Patrolien einer Standardarmee

------------------------------------------------------------
